--- a/.cirun.yml
+++ b/.cirun.yml
@@ -8,7 +8,7 @@ runners:
     instance_type: t3a.xlarge
     # Custom AMI with docker/cypress/hub pre-installed
     machine_image: ami-0978fa7dc739004d3
-    # Region: Oregon
+    # Region: Ireland
     region: eu-west-1
     # Use Spot Instances for cost savings
     preemptible:
